2011-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘assoclst’ from global state of ci(1).

	* ci.c (assoclst): Delete var.
	(addsyms): Take 2nd arg LS; walk it directly.
	(first_meaningful_symbolic_name): Take arg LS;
	find its last link and use its entry as user symdef.
	(main): Rename auto var ‘tp_assoc’ to ‘symbolic_names’;
	push onto that list instead of extending it; update calls
	to ‘addsyms’ and ‘first_meaningful_symbolic_name’.

2011-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘msg’ from global state of ci(1).

	* ci.c (msg): Delete var.
	(getlogmsg): Take pointer to ‘msg’.
	(main): Add auto var ‘msg’; update calls to ‘getlogmsg’.

2011-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘exitstatus’ from global state in programs.

	* ci.c (exitstatus): Delete var.
	(cleanup): Take pointer to ‘exitstatus’.
	(main): Add auto var ‘exitstatus’; update call to ‘cleanup’.
	* co.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.

2011-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	co: Add option ‘-S’ to enable "self-same" mode.

	* b-excwho.c (addlock_maybe): Rename from ‘addlock’; take additional
	arg ‘bool selfsame’; if true, don't distinguish who holds a lock.
	* b-excwho.h (addlock_maybe): Update func decl.
	(addlock): New macro.
	* co.c (main): Add handling for ‘-S’; use ‘addlock_maybe’.

2011-09-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘set_program_name’ from gnulib.

	* rcsutil.c: #include "progname.h".
	(gnurcs_init): Use ‘set_program_name’ and ‘program->invoke’.
	* b-complain.c (program_name): Delete var.
	* b-complain.h (program_name): Delete var decl.

2011-09-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Avoid "discards qualifiers" warning from GCC 4.4.

	This correctly finishes the incomplete lameness of 2011-06-14,
	"Avoid "discards qualifiers" warning from GCC 3.4".  The overall
	change is to convert from ‘char const *’ to ‘const char *’.
